init game config in admin panel
